# toftof-server

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Dockerfile  docker-build-toftof-server.sh  jenkinsfile  main.c  snapbuildinstall.sh
